--- a/init.html
+++ b/init.html
@@ -268,7 +268,7 @@
       cell.innerHTML = `<span class="badge">${i+1}</span><span class="word">${w}</span>`;
       grid.appendChild(cell);
     });
-    $('mnemo-wrap').style.display = 'block';
+    $('mnemo-container').style.display = 'block';
     applyMask(); // 初始统一遮挡
   }
 
