--- a/init.html
+++ b/init.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>助记词展示一次 + FIDO2 加密（仅 HTML/CSS）</title>
+  <title>助记词展示一次 + FIDO2 加密</title>
   <style>
     :root{
       --bg:#0b1220;
@@ -19,22 +19,22 @@
     a{color:var(--accent);text-decoration:none}
     .wrap{max-width:1000px;margin:32px auto;padding:0 18px}
 
-    /* 卡片与分组 */
-    .section{margin-bottom:28px}
-    .section-title{margin:0 0 10px;font-size:16px;color:#cbd5e1}
+    /* 分组与卡片 */
+    .section{margin:0 0 28px}
+    .section-title{margin:0 0 12px;font-size:16px;color:#cbd5e1}
     .card{
       background:var(--card);
       border:1px solid var(--line);
       border-radius:16px;
-      padding:20px 18px;
+      padding:24px 20px;
       box-shadow:0 6px 18px rgb(0 0 0 / 16%);
     }
-    .card + .card{margin-top:18px}
-    .divider{height:1px;background:#1f2937;margin:18px -6px}
-
-    /* 行/控件 */
-    .row{margin:16px 0}
+    .spacer{height:26px}
     .muted{color:var(--muted)}
+
+    /* 控件 */
+    .row{margin:14px 0}
+    .row-xl{margin:18px 0}
     button{
       background:#0f172a;border:1px solid #27324a;color:#e5e7eb;
       padding:12px 18px;border-radius:12px;cursor:pointer;
@@ -81,7 +81,7 @@
     /* 自适应 */
     @media (max-width:640px){
       .wrap{padding:0 14px}
-      .card{padding:16px 14px}
+      .card{padding:18px 14px}
       .grid{grid-template-columns:repeat(2,1fr)}
     }
   </style>
@@ -89,62 +89,27 @@
 <body>
 <div class="wrap">
 
-  <!-- Step 1 -->
+  <!-- Step 1：生成助记词 + 可选的离线备份 -->
   <section class="section">
     <h2 class="section-title">① 生成助记词</h2>
 
-    <!-- 操作卡：生成按钮 & 提示 -->
     <div class="card">
+
+      <!-- 操作行 -->
       <div class="row">
         <button id="btn-gen">生成助记词（仅显示一次）</button>
-        <span id="gen-tip" class="muted" style="margin-left:10px">未生成</span>
-      </div>
-      <div class="muted">点击后会在内存中导出各链分支（xprv/xpub 或 z*），默认不展示助记词；可手动点击按钮统一显示 30 秒。</div>
-    </div>
-
-    <!-- 展示卡：助记词网格 + 统一遮挡 -->
-    <div class="card" id="mnemo-container" style="display:none">
-      <div class="mnemo-box">
-        <div class="grid" id="mnemo-grid">
-          <!-- JS 动态填充 12/24 个 cell（保留占位结构便于样式预览） -->
-          <div class="cell"><span class="badge">1</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">2</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">3</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">4</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">5</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">6</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">7</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">8</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">9</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">10</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">11</span><span class="word">•••••</span></div>
-          <div class="cell"><span class="badge">12</span><span class="word">•••••</span></div>
-        </div>
-
-        <!-- 统一遮挡蒙层（默认显示） -->
-        <div class="mnemo-mask" id="mnemo-mask">
-          <div>
-            <button class="mnemo-btn" id="mnemo-toggle">
-              <span class="dot"></span>
-              <span>点击显示全部（30 秒）</span>
-            </button>
-            <div class="hint">确保周围安全，避免旁观与屏幕录制</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <div class="divider"></div>
-
-  <!-- Step 2 -->
-  <section class="section">
-    <h2 class="section-title">② 离线加密备份（JSON 文件，可选）</h2>
-    <div class="card">
-      <div class="row">
-        <label><input id="want-backup" type="checkbox"> 我要生成离线加密备份（JSON）</label>
+        <span id="gen-tip" class="muted" style="margin-left:10px"></span>
       </div>
 
+      <!-- 可选：离线加密备份（并入第①步） -->
+      <div class="row-xl" style="margin-top:18px">
+        <label>
+          <input id="want-backup" type="checkbox">
+          我要生成离线加密备份（JSON 文件）
+        </label>
+      </div>
+
+      <!-- 密码区域（默认隐藏，由脚本控制显示） -->
       <div id="backup-area" style="display:none">
         <div class="muted">密码需 ≥8 且包含：字母 + 数字 + 特殊字符。</div>
         <div class="row" style="display:flex;gap:10px;flex-wrap:wrap">
@@ -154,14 +119,49 @@
         </div>
         <div id="pw-tip" class="muted"></div>
       </div>
+
+      <div class="spacer"></div>
+
+      <!-- 助记词网格 + 蒙层（默认隐藏，由脚本控制展示/隐藏） -->
+      <div class="card" id="mnemo-container" style="display:none">
+        <div class="mnemo-box">
+          <div class="grid" id="mnemo-grid">
+            <!-- 生成前仅占位，生成后由脚本填充 -->
+            <div class="cell"><span class="badge">1</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">2</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">3</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">4</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">5</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">6</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">7</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">8</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">9</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">10</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">11</span><span class="word">•••••</span></div>
+            <div class="cell"><span class="badge">12</span><span class="word">•••••</span></div>
+          </div>
+
+          <!-- 统一遮挡蒙层 -->
+          <div class="mnemo-mask" id="mnemo-mask">
+            <div>
+              <button class="mnemo-btn" id="mnemo-toggle">
+                <span class="dot"></span>
+                <span>点击显示全部（30 秒）</span>
+              </button>
+              <div class="hint">确保周围安全，避免旁观与屏幕录制</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
-  <div class="divider"></div>
+  <div class="spacer"></div>
 
-  <!-- Step 3 -->
+  <!-- Step 3：注册/复用 FIDO2 凭证 -->
   <section class="section">
-    <h2 class="section-title">③ 注册/复用 FIDO2 凭证</h2>
+    <h2 class="section-title">② 注册/复用 FIDO2 凭证</h2>
     <div class="card">
       <div class="row">
         <button id="btn-register">注册/复用 FIDO2 凭证</button>
@@ -170,17 +170,16 @@
     </div>
   </section>
 
-  <div class="divider"></div>
+  <div class="spacer"></div>
 
-  <!-- Step 4 -->
+  <!-- Step 4：加密分支并写库 -->
   <section class="section">
-    <h2 class="section-title">④ 加密分支并写入数据库</h2>
+    <h2 class="section-title">③ 加密分支并写入数据库</h2>
     <div class="card">
       <div class="row">
         <button id="btn-encrypt" disabled>加密分支并写入数据库</button>
         <span id="encrypt-tip" class="muted" style="margin-left:10px"></span>
       </div>
-
       <div class="row muted" id="final-tip"></div>
     </div>
   </section>
@@ -221,37 +220,33 @@
   let mnemonic = null;
   let branches = null;
 
-  /********** 统一遮挡控制（按当前 HTML 的 id） **********/
+  /********** 统一遮挡控制 **********/
   let maskTimer = null;
   const DISPLAY_MS = 30_000; // 30 秒
 
   function applyMask() {
     const mask = $('mnemo-mask');
     if (!mask) return;
-    mask.style.display = 'flex';                    // 重新显示遮挡层
-    const btn = $('mnemo-toggle');
-    if (btn) btn.querySelector('span:nth-child(2)').textContent = '点击显示全部（30 秒）';
+    mask.style.display = 'flex';
     clearTimeout(maskTimer);
   }
 
   function revealAll() {
     const mask = $('mnemo-mask');
     if (!mask) return;
-    mask.style.display = 'none';                    // 隐藏遮挡层，开始倒计时
+    mask.style.display = 'none';
     clearTimeout(maskTimer);
     let left = DISPLAY_MS / 1000;
     maskTimer = setTimeout(function tick () {
       left -= 1;
-      if (left <= 0) { applyMask(); return; }       // 到时恢复遮挡
+      if (left <= 0) { applyMask(); return; }
       maskTimer = setTimeout(tick, 1000);
     }, 1000);
   }
-
-  // 遮挡层按钮：一次性显示全部助记词
   $('mnemo-toggle').onclick = revealAll;
 
-  /********** 渲染助记词网格 **********/
-  function renderMnemonicOnce(m){
+  /********** 助记词渲染/隐藏 **********/
+  function renderMnemonic(m){
     const words = m.trim().split(/\s+/);
     const grid = $('mnemo-grid');
     grid.innerHTML = '';
@@ -261,25 +256,58 @@
       grid.appendChild(cell);
     });
     $('mnemo-container').style.display = 'block';
-    applyMask(); // 初始统一遮挡
+    applyMask();
   }
 
-  /********** Step 1：生成助记词 **********/
+  function hideMnemonicCompletely(){
+    // 彻底不展示助记词（避免任何泄露）
+    const grid = $('mnemo-grid');
+    if (grid) grid.innerHTML = '';
+    const cont = $('mnemo-container');
+    if (cont) cont.style.display = 'none';
+    clearTimeout(maskTimer);
+  }
+
+  /********** 生成按钮 **********/
   $('btn-gen').onclick = ()=>{
-    mnemonic = genMnemonic(128); // 12 词
-    renderMnemonicOnce(mnemonic);
+    mnemonic = genMnemonic(128);               // 12 词
     const seed = mnemonicToSeed(mnemonic, '');
     branches = exportBranches(seed);
-    $('gen-tip').textContent = '助记词已生成（已统一遮挡）；分支已在内存导出。';
+
+    if ($('want-backup').checked) {
+      hideMnemonicCompletely();
+      $('gen-tip').textContent =
+        '已选择离线备份：为了安全，助记词不会在页面展示。请设置密码并点击“生成并下载备份 JSON”。';
+    } else {
+      renderMnemonic(mnemonic);
+      $('gen-tip').textContent = '';          // 不再显示原“已生成/已遮挡”的提示
+    }
     $('btn-encrypt').disabled = false;
     $('final-tip').textContent = '';
   };
 
-  /********** Step 2：离线备份（可选） **********/
-  $('want-backup').onchange = e=>{
-    $('backup-area').style.display = e.target.checked ? 'block' : 'none';
-    $('btn-backup').disabled = !e.target.checked;
+  /********** 生成后切换“离线备份”时联动展示策略 **********/
+  $('want-backup').onchange = () => {
+    if (!mnemonic) {                          // 还没生成，无需处理
+      $('backup-area').style.display = $('want-backup').checked ? 'block' : 'none';
+      $('btn-backup').disabled = !$('want-backup').checked;
+      return;
+    }
+    if ($('want-backup').checked) {
+      hideMnemonicCompletely();
+      $('gen-tip').textContent =
+        '已选择离线备份：为了安全，助记词不会在页面展示。请设置密码并点击“生成并下载备份 JSON”。';
+    } else {
+      renderMnemonic(mnemonic);
+      $('gen-tip').textContent = '';
+    }
+    $('backup-area').style.display = $('want-backup').checked ? 'block' : 'none';
+    $('btn-backup').disabled = !$('want-backup').checked;
   };
+
+  /********** 离线备份密码 UI **********/
+  $('backup-area').style.display = 'none';
+  $('btn-backup').disabled = true;
 
   $('pw1').oninput = $('pw2').oninput = ()=>{
     const p1=$('pw1').value, p2=$('pw2').value;
@@ -301,10 +329,10 @@
     }catch(e){ $('pw-tip').innerHTML='<span class="err">备份失败：'+(e?.message||e)+'</span>'; console.error(e); }
   };
 
-  /********** Step 3：注册/复用 FIDO2 凭证（不阻塞第 4 步） **********/
+  /********** 注册/复用 FIDO2（不阻塞写库） **********/
   $('btn-register').onclick = async ()=>{
     try{
-      const res = await ensureCredentialWithChoice(); // { ok, id_hex, created }
+      const res = await ensureCredentialWithChoice();
       if (res?.created){
         $('reg-tip').innerHTML = '<span class="ok">已注册新凭证。</span>';
       }else{
@@ -316,13 +344,12 @@
     }
   };
 
-  /********** Step 4：PRF→HKDF → AES-GCM 加密并写库 **********/
+  /********** PRF→HKDF → AES-GCM 加密并写库 **********/
   $('btn-encrypt').onclick = async ()=>{
     try{
       if (!branches){ alert('请先生成助记词'); return; }
       $('encrypt-tip').textContent = '请触摸密钥以继续…';
 
-      // 直接派生 KEK（若无凭证，fido2.js 内部会引导注册并重试）
       const { kek, salt, rp_id, info, credential_id, toHex } = await deriveKEK();
 
       const enc = async s => s ? await aesGcmEncryptStr(kek, s) : null;
